samples/_failures_safe/1761544521_fba25f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_290a3ba5.c: In function ‘main’:
./samples/SAFE/__tmp_290a3ba5.c:162:12: error: missing terminating " character
  162 |     printf("\
      |            ^~
./samples/SAFE/__tmp_290a3ba5.c:162:5: error: expected expression at end of input
  162 |     printf("\
      |     ^~~~~~
./samples/SAFE/__tmp_290a3ba5.c:162:5: error: expected declaration or statement at end of input
